feat(archunit): framework-neutral vocabulary with role-based presets, SPI and class-path detection (WP-30, WP-31)
FrameworkAnnotations speaks roles instead of Spring stereotypes: injectable, webController,
restController, transactional, eventListener, moduleDeclaration, publishedInterface and
persistenceEntity, each a list of annotation names. Presets spring() (default), jakarta(),
quarkus(), micronaut() and none(); with*/named() adjust a preset; the old accessors stay as
deprecated delegates and of(...) keeps the 0.3 hard-coded JPA and @NamedInterface values.

Nine rule texts lose their Spring vocabulary (DCA-ONI-003 reads persistenceEntity, DCA-MAP-006
names Spring Modulith only as the example); AnnotationRoles turns a role into ArchUnit predicates,
an empty role matches nothing. DCA-MAP-006 and the context-map renderer consult every configured,
loadable module and published-interface annotation a package carries.

FrameworkAnnotationsProvider (ServiceLoader SPI) with the built-ins as providers;
FrameworkAnnotations.detect() picks the preset from the test class path, ties stay undecided
(spring (default; undecided: ...)); DcaLayout.forBasePackage detects, withFrameworkPreset(name)
and dca.framework=<name> select by name, explicit wins. DcaArchitectureTest reports the preset
and its origin as a first passing test.

FrameworkNeutralityTest guards rule texts and building-block javadoc against framework and shop
vocabulary outside example sentences; the javadoc loses its Spring mentions. Fixtures per preset
and for a second module system; rules.json/RULES.md regenerated (114 rules, ids unchanged).

Co-Authored-By: Claude Fable 5.1 <noreply@anthropic.com>